(add) scripts + dependancies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a trivia app by Clayton Christenson in application for a coding apprenticeship at Tandem",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open",
+    "build": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@webpack-cli/serve": "^1.0.1",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
     "style-loader": "^0.23.0",
